Fix slideshow widget, add field classes, set img 100%

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
@@ -73,6 +73,9 @@
 	//slider container overrides layout padding on mobile
 	.field-oc-image-multi{
 		@include widgetFull;
+		img{
+			width: 100%;
+		}
 	}
 	
 }//end slideshow widget
