Remove older paddedContent and text mixins, adjust layout builder admin theming

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
@@ -6,7 +6,7 @@
 	background: $offWhite;
 	& > div{
 		padding: 10px 20px;
-		@include paddedContent;
+		max-width: $contentStop + 40px;
 		@include auto;
 		position: relative;
 		@include safeFlex(row,wrap,null,center);
