--- a/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
@@ -3,10 +3,7 @@
 =============== */
 html > body:not(.is-front):not(.path-node):not(.node-type-page){
 	.layout-content{
-		@include paddedText;
-		&.taxonomy{
-			@include paddedContent;
-		}
+		max-width: $contentStop + 40px;
 		@include auto;
 		padding: 0 20px 3em;
 	}
