--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_layout_builder_admin.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_layout_builder_admin.scss
@@ -3,8 +3,22 @@
 =================== */
 .layout-section .layout-builder--layout__region{
 	.draggable{
+		@include spacer(2);
+		max-height: 500px;
+		overflow: hidden;
 		*{
 			word-break: break-all;
+		}
+	}
+	//hide widget-anchors
+	.widget-anchors{
+		display: none;
+	}
+	//constrain widgets to editing box
+	.field--name-field-oc-widgets{
+		@include edgeReset;
+		.section:first-child{
+			margin-top: 0 !important;
 		}
 	}
 }//end layout builder section region
