--- a/web/themes/oc_patterns/templates/zzz-custom/user/user.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/user/user.html.twig
@@ -16,7 +16,7 @@
  * @see template_preprocess_user()
  */
 #}
-<article{{ attributes }}>
+<article{{ attributes.addClass('user-dashboard') }}>
   {% if content %}
     {{- content -}}
   {% endif %}
