--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
@@ -89,6 +89,7 @@ $h6Sm: 18px;
 	text-transform: uppercase;
 	text-align: center;
 	max-width: $contentStop;
+	@include spacer(1.5);
 	@include auto;
 }
 
