--- a/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
@@ -29,8 +29,9 @@ html > body:not(.is-front):not(.path-node):not(.node-type-page){
 
 /* USER DASHBOARD
 ----------------------- */
-.user-dashboard{
+article.user-dashboard{
 	margin-top: -3em;
+	@include spacer(3);
 	//image, username, since, roles
 	& > .layout--onecol:first-child{
 		position: relative;
@@ -68,14 +69,68 @@ html > body:not(.is-front):not(.path-node):not(.node-type-page){
 			@include calc(width, "100% - 310px");
 			margin-left: 310px;
 		}
-	}
+		.user-created{
+			@include spacer(.5);
+		}
+		.user-roles{
+			span.role:not(:last-child){
+				margin-right: .35em;
+				position: relative;
+				padding-right: .5em;
+				&:after{
+					@include vertRule(right,80%,$borderRule);
+				}
+			}
+		}
+	}//end created
 
-	.block-field.block-roles{
-		@include tab{
-			@include calc(width, "100% - 310px");
-			margin-left: 310px;
+	// links & recently Authored
+	& > .layout--onecol:nth-child(2){
+		.layout__region--content{
+			@include safeFlex(row,wrap,null,null);
 		}
 	}
+
+	//quicklinks
+	.block-field-user-quick-links{
+		@include spacer(2);
+		width: 100%;
+		@include contentStop{
+			width: 50%;
+			padding-right: 40px;
+		}
+		ul{
+			@include listReset;
+			@include bleed(20px);
+			@include safeFlex(row,wrap,center,center);
+			li{
+				padding-left: 10px;
+				padding-right: 10px;
+				@include spacer(1);
+				a{
+					width: 240px;
+					height: 75px;
+					display: table-cell;
+					vertical-align: middle;
+				}
+			}
+		}
+	}
+
+	// Recently Authored
+	.block:not(.block-field-user-quick-links){
+		width: 100%;
+		@include contentStop{
+			width: 50%;
+			padding-left: 40px;
+		}
+		.view.user-dashboard{
+			text-align: center;
+			.views-row{
+				@include spacer(.5);
+			}
+		}
+	}//end recently added
 
 	//hide member for
 	& > .js-form-type-item{
