Add Visually Hidden, hide quicklinks from user form, adjust user dashboar to allow for no image

--- a/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -140,6 +140,15 @@
 	color: inherit;
 }
 
+///mixin - visually hidden
+@mixin visuallyHidden{
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
+}
+
 
 /// mixin - overlay
 @mixin overlay{
