--- a/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
@@ -288,6 +288,14 @@
 
 <div class="mixin-tile">
 	<ul>
+		<li><strong>Visually Hidden</strong></li>
+		<li class="include-tag">@include visuallyHidden;</li>
+		<li>Clips an element to 1px by 1px to render it visible to screen readers only.</li>
+	</ul>
+</div>
+
+<div class="mixin-tile">
+	<ul>
 		<li><strong>List Reset</strong></li>
 		<li class="include-tag">@include listReset;</li>
 		<li>Removes default margin, padding and list styles on ul and ol lists.</li>
