Radios fieldset fix

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -190,8 +190,10 @@ fieldset{
 		@include larger;
 		margin-bottom: .5em;
 	}
-	.fieldset-wrapper{
-		margin: 0 1em;
+	&:not(.js-webform-type-radios){
+		.fieldset-wrapper{
+			margin: 0 1em;
+		}
 	}
 }
 
