--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/05-radio/_radio.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/05-radio/_radio.scss
@@ -2,34 +2,37 @@
 	 RADIO
 ============== */
 
-//move radio options inline
-.js-webform-radios{
-	margin-bottom: 0;
-	@include safeFlex(row,wrap,null,null);
-}
-
-
-//move input inline with label
-.js-form-type-radio{
-	width: auto;
-	margin-right: 1em;
-	label,input{
-		display: inline-block;
-	}
-	label{
-		font-weight: $regular;
+form:not(.layout-builder-add-block):not(.layout-builder-update-block){
+	//move radio options inline
+	.js-webform-radios{
 		margin-bottom: 0;
+		@include safeFlex(row,wrap,null,null);
 	}
-	input[type="radio"]{
-		margin-right: .3em;
-		position: relative;
-		top: -2px;
+	//move input inline with label
+	.js-form-type-radio{
+		width: auto;
+		margin-right: 1em;
+		label,input{
+			display: inline-block;
+		}
+		label{
+			font-weight: $regular;
+			margin-bottom: 0;
+		}
+		input[type="radio"]{
+			margin-right: .3em;
+			position: relative;
+			top: -2px;
+		}
+		
 	}
 	//custom radio buttons (defined in forms.scss, set with variable from macros.twig)
-	.custom-options &{
-		@include customOptions;
-		label:before{
-			border-radius: 50%;
+	.custom-options{
+		.js-form-type-radio{
+			@include customOptions;
+			label:before{
+				border-radius: 50%;
+			}
 		}
 	}
-}
+}//end form
