Move skip links into header region so they are more accessible, fix bad roles on search block buttons, make anchor link ids more exclusive

--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -53,6 +53,12 @@
 
 	{% block pageHeader %}
 		<header role="banner">
+			<a href="#main-navigation" class="visually-hidden focusable">
+				{{ 'Skip to main navigation'|t }}
+			</a>
+			<a href="#main-content" class="visually-hidden focusable">
+				{{ 'Skip to main content'|t }}
+			</a>
 			{{ page.header }}
 		</header>
 	{% endblock %}
