--- a/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
@@ -11,8 +11,8 @@
 #}
 
 <div class="block block-search-form-block">
-	<div class="t-search-wrapper"><a href="#" class="t-search" role="expander">open</a></div>
-	<div class="t-search-close"><a href="#" class="close-search" role="contractor">X</a><span class="close-text">close</span></div>
+	<div class="t-search-wrapper"><a href="#" class="t-search" role="button">open</a></div>
+	<div class="t-search-close"><a href="#" class="close-search" role="button">X</a><span class="close-text">close</span></div>
 	<div class="search-form-wrapper" aria-expanded="false">
 		<form action="/site-search" method="get" id="views-exposed-form-site-search-search-results" accept-charset="UTF-8" data-drupal-form-fields="edit-search-api-fulltext">
 			{{ content.search_api_fulltext }}
