Move back to top in footer region

--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -115,6 +115,7 @@
 				<div class="footer-inner">
 					{{ page.footer }}
 				</div>
+				<div class="back-anchor"><a href="#">Back to Table of Contents</a></div>
 			</footer>
 		{% endif %}
 	{% endblock %}
