--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
@@ -38,14 +38,14 @@
   {% set blockTitle = configuration.label|clean_class %}
 {% endif %}
 {{ attach_library('oc_patterns/page-menu') }}
-<nav role="navigation" aria-labelledby="block-page-menu" id="block-page-menu"{{ attributes|without('role', 'aria-labelledby', 'id').addClass(blockTitle,heading_id, 'page-menu') }}>
+<nav role="navigation" aria-labelledby="page-menu-title" id="block-page-menu"{{ attributes|without('role', 'aria-labelledby', 'id').addClass(blockTitle,heading_id, 'page-menu') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {{ title_prefix }}
-  <h2 class="block-title{% if not configuration.label_display %} visually-hidden{% endif %}"><a href="#" class="page-menu-toggle" aria-controls="page-menu-wrapper" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>{{ configuration.label }}</h2>
+  <h2 id="page-menu-title" class="block-title{% if not configuration.label_display %} visually-hidden{% endif %}"><a href="#" class="page-menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>{{ configuration.label }}</h2>
   {{ title_suffix }}
   {# Menu. #}
   {% block content %}
-    <div id="page-menu-wrapper" aria-hidden="true">
+    <div id="page-menu-wrapper">
       {{ content }}
     </div>
   {% endblock %}
