Fix section nav padding, add html 5 nav tag to anchor nav and set proper aria roles

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
@@ -88,7 +88,7 @@ $h6Sm: 18px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-align: center;
-	max-width: $contentStop;
+	max-width: $textMax;
 	@include spacer(1.5);
 	@include auto;
 }
@@ -100,7 +100,7 @@ h1 {
 	@include heading1;
 }
 
-h2:not(.block-title):not(.section-title){
+h2{
 	@include heading2;
 }
 
