--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-oc-widgets.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-oc-widgets.html.twig
@@ -54,9 +54,9 @@ set classes = [
 {% endfor %}
 
 {% if count > 0 %}
-   <div class="widget-anchors" id="toc">
-		<h2><span class="toc-toggle">&#9776</span>On This Page</h2>
-		<div class="anchors" aria-expanded="false">
+   <nav class="widget-anchors" role="navigation" aria-labelledby="toc-title">
+		<h2 id="toc-title"><a href="#" class="toc-toggle"><i class="fa fa-bars" aria-hidden="true"></i>On This Page</a></h2>
+		<div id="toc-anchor-wrapper" class="anchors">
 	      {% for anchor in items %}
 				{% if anchor.content['#paragraph'].field_anchor_link.0.value %}
 	            <a href="#anchor-{{ anchor.content['#paragraph'].field_anchor_link.0.value|clean_id }}">{{ anchor.content['#paragraph'].field_anchor_link.0.value }}</a>
