--- a/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-media-file.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-media-file.html.twig
@@ -38,7 +38,7 @@
  * @ingroup themeable
  */
 #}
-
+{# removes the surrounding unnecessary div from files so can be inline in wysiwyg #}
 {% for item in items %}
 	{{ item.content }}
 {% endfor %}
