Remove old file icons, increase padding for primary tabs, adjust embeds

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
@@ -133,6 +133,7 @@ h2.block-title{
 h2.section-title{
 	@include blockTitle;
 	font-size: 24px;
+	max-width: $textMax + 40px;
 }
 h3.widget-title{
 	@include blockTitle;
