--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
@@ -51,7 +51,7 @@ SECTION LAYOUTS
 		padding-right: 20px;
 	}
 	.field-section-intro{
-		max-width: $textMax;
+		max-width: $textMax + 40px;
 		padding-left: 20px;
 		padding-right: 20px;
 		@include auto;
