--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -177,7 +177,7 @@ body {
 ----------------- */
 #block-oc-patterns-local-tasks{
 	max-width: $contentStop;
-	padding: .75em 20px .5em;
+	padding: 30px 20px 20px;
 	position: relative;
 	@include auto;
 	@include spacer(1);
